<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">aFoodChronicle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="yoleni">Yolenis Flagship store</string>
    <string name="vorria">Vorria Morria</string>
    <string name="ariana">Pnyka</string>
    <string name="pantopoleio">Pantopoleio medogeiakis diatrofis</string>

    <string name="yoleni_snippet">Yolenis Flagship store /n kdsfsdhfshdfhsdsdfsdfsdfsdfsdfhjsdf</string>
    <string name="vorria_snippet">Vorria Morria /n kasdfhgsdfhfsdhadfjasjdfhgsakjdfgasjfgggg</string>
    <string name="ariana_snippet">Ariana /n sdakgfjhsdfgjsdfgasjdfsdhf</string>
    <string name="pantopoleio_snippet">Pantopoleio medogeiakis diatrofis /sdkfsadjkfhgsdjfhgjsadghfj</string>

    <string name="location_permission_denied">Location permission denied.</string>
    <string name="permission_required_toast">Permission is required.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \\\'my location\\\' feature, which shows your current location on the map.</string>
    <string name="login_nav_header">Log In/ Sign up</string>
    <string name="signup_nav_header">Sign Up</string>
    <string name="minimum_password">Password must contains at least 6 characters.</string>
    <string name="auth_failed">Authentication failed.</string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="status_sign_in_failed">Sign-in failed</string>


    <string name="emailpassword_title_text">Email and Password</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="facebook_app_id">1953528261641450</string>
    <string name="fb_login_protocol_scheme">fb1953528261641450</string>
    <string name="response_to_exception">Response:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="description">Description</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, per lobortis partiendo at, has illud dicit te, an quas possim sit. Per dicant bonorum an, mel id nisl omnesque vulputate, sea iriure omnesque expetenda ut. Ex duis vidisse elaboraret mei, iusto nihil quaerendum an his. Affert eripuit per no, ex cum epicuri percipitur. Dicta fabulas invidunt ad mei. Quo ex volumus recteque, agam sapientem nam ad.</string>
    <string name="lorem_ipsum_detail">Lorem ipsum dolor sit amet, cum ei illum posse legendos, ne usu quidam eruditi inimicus. No essent latine nam. Cum labitur tibique molestie at, tantas mandamus voluptaria eos ex. Debet indoctum consulatu nec cu.  Ne facer maiestatis usu, ignota honestatis an eos. Id vis malis timeam. Nam in vidit adhuc, adipisci scriptorem mea ea. Ad alia altera feugiat quo, an tempor tamquam nec.  Sea ei veritus civibus suscipit, sea te porro expetendis, vocibus concludaturque nam et. Efficiantur consectetuer at nam, aperiri vituperatoribus eos ex, audiam efficiendi eos at. Facilis intellegat ne pri. Malis accusata nam ut, ei mea nisl mazim eloquentiam, eu ceteros nusquam mel. Omnes maiorum ex his, qui doctus fastidii adipiscing ad.  Cum audiam vivendo cu, tation instructior id nec. Ea dicant quidam gubergren ius, senserit molestiae deterruisset in eum. Mel etiam primis perfecto id, illud luptatum pertinax ei nec. Ne sensibus explicari per, pro ut eripuit quaestio percipitur. Possim periculis splendide cu has, omittam ancillae apeirian no per, ea magna impedit nusquam pri. Quo id aeterno constituto, cu brute causae graecis vix.  Utroque corpora lucilius ius in, id noster vituperatoribus nam, dicam consul ceteros te nec. Vim ex libris meliore, cu congue maiestatis necessitatibus duo, mea offendit eleifend pericula te. Case illum voluptatibus nec eu, duo an modo fugit. Pri altera quaestio te, nonumy doctus ex quo. Duo te minim malorum, est ut postea nusquam definitionem, ei unum volutpat cum. Case accusata senserit eam ex, mundi invenire mea id.  In tota argumentum cum. Sed facete cetero partiendo ea, partiendo ullamcorper ei nec. Praesent voluptaria an vel, id porro dicunt est. Posse tation theophrastus eam eu. Posse petentium definitiones usu cu.  Dico etiam suscipit ut vel, qui congue probatus suscipiantur et, ius nobis vitae omittantur ut. Lorem consetetur interesset vis te, ea brute falli tractatos duo. Ne his postulant explicari, aperiri admodum cu quo. Minim consul liberavisse nec ut, tota veniam inciderint ea eum. Et est epicurei corrumpit, justo veritus iudicabit ex quo, cu facilisi consetetur cum.  Mei id harum delenit, diam essent te vis. Nec tollit libris aliquando id. Et his vidit movet maiorum. Mel no putant nominavi definitiones. Nec ei corrumpit appellantur, ea vim congue omittam ullamcorper.  Nemore volutpat laboramus pro id. Eum aperiri fierent reformidans cu. Pri omnesque argumentum an, nonumy essent mel ut. Ne mutat liber omnesque mel.  Ut cum quas virtute, ex usu volutpat theophrastus. Prima tamquam luptatum sea ad, eos et clita facete indoctum. Agam affert integre te duo. Utinam tibique pertinax ius eu. Cum te omnium integre minimum, quo aperiri blandit inimicus ne. Cu cetero persius pri.  Vim velit zril et, eam clita atomorum consulatu in. Eu vim delicata elaboraret, qui diam modus no, ne probo justo invidunt pri. Quis possit quo ad, ne nec meliore assentior. Vim ullum altera ut, an duo odio convenire tincidunt. Homero vivendo duo eu, oratio habemus iudicabit ne eum. Pri liber liberavisse eu, eros albucius complectitur eam cu.  Agam facete ne nam. Mazim consequat at eum, ad nec delicata reprehendunt, et eum maluisset expetendis. Brute omittantur eu per, ex eos dicunt reformidans, decore platonem his et. Te sea movet dignissim signiferumque, no per labores adolescens, no mei dicunt veritus.  Dicam consequat vel te, his diam deserunt et, has ea velit conclusionemque. At pro dicunt insolens. Partem graecis minimum quo ei, his invidunt necessitatibus ei, inani dignissim ex eam. Eos adhuc viris partem ea. Facilis sententiae ex qui, oratio urbanitas ad eum. Vel aliquando vulputate argumentum ut.  Te eam oblique labitur, ut est veniam accusata, ipsum appareat tacimates nec ex. Pri ne animal accumsan. Vero expetenda concludaturque mei ei, nec et scripta viderer assueverit. Ex feugiat iudicabit conceptam vis, ubique aliquam eos ut.  Ex exerci audiam ius, ut his nostrud reprimique. Cu vim falli gloriatur. In nam dolorum ceteros maiestatis. Eum ei volumus molestie, mea officiis voluptatum ad, eam assum exerci ea.  Ei oblique deseruisse liberavisse est, in dolorem tibique has. Aeque graeci invidunt vim cu. Eos ei agam graeci, ad eam dolore scripserit. Id quo erant aliquando, nec natum eripuit delicatissimi ex.  Et legendos accusata vim, id qui assum iuvaret adolescens. Nibh adhuc usu eu, ex mei duis discere pertinax. Consul iriure molestie id vel, has iudicabit vulputate consequuntur eu, qui quodsi timeam volutpat eu. Ad duo veri corpora, sit te lorem perpetua cotidieque. Id summo dolorum conceptam pro. Te ius dicit vulputate, molestie scribentur mei ne.  Et dicam fuisset platonem nam. Id quod integre duo, in sit dolores mediocrem splendide, mei ut admodum interpretaris. His in iriure sententiae. Sit error discere et, no vidisse vivendo liberavisse has. Cu vim brute lorem, definiebas consequuntur at vel.  Pro nobis tantas no. Cibo timeam at ius, ea mutat alienum pro. Nemore instructior nam no, cum posse constituto ad, ignota incorrupte vituperatoribus his ut. Ex dolorum tibique officiis eos, ne his augue patrioque, nam persius disputationi delicatissimi ei. Ius quodsi nonumes disputationi te, vis id convenire disputationi. Sumo paulo assueverit ad quo, at eos nominavi inciderint disputationi. Brute lorem diceret cum te.  Per ut ullum laoreet gubergren, vim at viderer abhorreant rationibus. At sumo appetere sit, vel populo eruditi deseruisse id. Id quo case sale qualisque. Nam paulo partiendo interesset ad, pri ne erat illum aliquam, at nobis admodum moderatius sea. Timeam diceret ius te, ut cotidieque reformidans eos.  Vel zril principes forensibus ea, solum atomorum nam no. An dolor appetere perfecto vix, lorem incorrupte an sea. Gubergren rationibus neglegentur cu eum, vel ea amet ponderum atomorum. Qui quod accusamus prodesset ne. At sit duis illum quaerendum, usu ei iisque persius qualisque. Te aperiri partiendo sea, has oblique indoctum in, pri iisque virtute democritum te.  Saperet ocurreret ius at, et soleat sapientem tincidunt cum. Alterum aliquid tibique vim ex, tantas laudem has in. Has et hinc propriae, eos ubique dolores voluptatum eu, ut per facete philosophia. Mutat volutpat cu pri, cu duo quas exerci. Tantas epicurei tincidunt in vim. No nam dolor lucilius intellegam, sumo aeque noster te cum, prima quodsi ex nam.  Vitae legimus recusabo eum cu. Habeo everti consulatu at his. Ex volumus gubergren pri, unum.</string>
    <string name="send_button_label">Send</string>

    <string name="default_user_image">Default user image</string>
    <string name="add_photo">Add photo button</string>
    <string name="profile_pic_background">Profile picture background</string>
    <string name="btn_choose">Button for choosing profile pic</string>
    <string name="online_status">Image for showing online status</string>
    <string name="badge_infowindow">Badge for infoWindow</string>
    <string name="write_your_message">Write your message here…</string>
    <string name="username">User name</string>
    <string name="age">Age</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="decline_friend_request">Decline friend request</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="have_account">Already have an account? Log in here!</string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="full_name">Full name</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">Send new password</string>
    <string name="log_in_here">Log in here!</string>
    <string name="last_seen">Last seen</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
</resources>
