<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:visibility="visible"/>
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:src="@drawable/default_profile"
        android:id="@+id/profile_visit_user_image"
        android:contentDescription="@string/default_user_image"/>

    <TextView
        android:id="@+id/profile_visit_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_visit_user_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/username" />

    <TextView
        android:id="@+id/profile_visit_user_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_visit_user_name"
        android:layout_centerHorizontal="true"
        android:text="@string/age" />

    <TextView
        android:id="@+id/profile_visit_user_description"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile_visit_user_age"
        android:layout_marginTop="30dp"
        android:text="@string/lorem_ipsum"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/profile_visit_user_friend_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_visit_user_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:text="@string/send_friend_request" />

    <Button
        android:id="@+id/profile_visit_user_decline_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_visit_user_friend_request"
        android:layout_centerHorizontal="true"
        android:text="@string/decline_friend_request"/>


</RelativeLayout>