<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.afoodchronicle.chat.fragments.ChatsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/requests_profile_image"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/default_profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/requests_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/username"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/requests_profile_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/description"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/requests_decline_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textColor="@color/colorAccent"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:text="@string/decline"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/requests_accept_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:text="@string/accept"
                    android:textSize="16sp" />



            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
